<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/abbreviationsBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="42dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mondayLabel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/material_calendar_monday"
            android:textColor="@color/daysLabelColor"
            android:textSize="@dimen/_9ssp" />

        <TextView
            android:id="@+id/tuesdayLabel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_day_background"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/material_calendar_tuesday"
            android:textColor="@color/daysLabelColor"
            android:textSize="@dimen/_9ssp" />

        <TextView
            android:id="@+id/wednesdayLabel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/material_calendar_wednesday"
            android:textColor="@color/daysLabelColor"
            android:textSize="@dimen/_9ssp" />

        <TextView
            android:id="@+id/thursdayLabel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_day_background"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/material_calendar_thursday"
            android:textColor="@color/daysLabelColor"
            android:textSize="@dimen/_9ssp" />

        <TextView
            android:id="@+id/fridayLabel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/material_calendar_friday"
            android:textColor="@color/daysLabelColor"
            android:textSize="@dimen/_9ssp" />

        <TextView
            android:id="@+id/saturdayLabel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_day_background"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/material_calendar_saturday"
            android:textColor="@color/daysLabelColor"
            android:textSize="@dimen/_9ssp" />

        <TextView
            android:id="@+id/sundayLabel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/material_calendar_sunday"
            android:textColor="@color/daysLabelColor"
            android:textSize="@dimen/_9ssp" />
    </LinearLayout>

    <com.applandeo.materialcalendarview.extensions.CalendarViewPager
        android:id="@+id/calendarViewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/calendar_view_grid"
        android:nestedScrollingEnabled="true" />
</LinearLayout>